--- a/index.html
+++ b/index.html
@@ -40,9 +40,21 @@
           <select id="position" class="w-full border border-gray-300 rounded-lg p-3 focus:outline-none focus:ring-2 focus:ring-blue-500">
             <option value="">-- Choose a position --</option>
             <option value="software-engineer">Software Engineer</option>
-            <option value="data-analyst">Data Analyst</option>
-            <option value="product-manager">Product Manager</option>
-            <option value="sales-executive">Sales Executive</option>
+<option value="frontend-developer">Frontend Developer</option>
+<option value="backend-developer">Backend Developer</option>
+<option value="data-analyst">Data Analyst</option>
+<option value="data-scientist">Data Scientist</option>
+<option value="product-manager">Product Manager</option>
+<option value="project-manager">Project Manager</option>
+<option value="sales-executive">Sales Executive</option>
+<option value="marketing-manager">Marketing Manager</option>
+<option value="business-analyst">Business Analyst</option>
+<option value="hr-manager">HR Manager</option>
+<option value="customer-support">Customer Support</option>
+<option value="finance-officer">Finance Officer</option>
+<option value="operations-manager">Operations Manager</option>
+<option value="ui-ux-designer">UI/UX Designer</option>
+
           </select>
         </div>
 
